--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,6 +2,7 @@ fastapi
 uvicorn[standard] # Tambien puede cambiarse por 'ultimate' o 'standard'
 requests
 pydantic
+pymysql
 pydantic_core
 python-jose
 python-multipart
