--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,5 +8,8 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "gsap": "^3.13.0"
+  }
 }
