--- a/frontend/frontend/package.json
+++ b/frontend/frontend/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/vue-fontawesome": "^3.0.8",
     "axios": "^1.9.0",
     "three": "^0.176.0",
+    "three-orbitcontrols": "^2.110.2",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
   },
