--- a/frontend/frontend/package.json
+++ b/frontend/frontend/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/vue-fontawesome": "^3.0.8",
+    "@vueuse/core": "^13.2.0",
     "axios": "^1.9.0",
     "gsap": "^3.13.0",
     "three": "^0.176.0",
